# pacman

./: meson.build
doc/: Makefile.am
lib/libalpm/: be_sync.c  dload.c
src/pacman/: Makefile.am
